clean up of compiler warnings