@@ -8,6 +8,7 @@ import org.jboss.resteasy.spi.DecoratorProcessor;
 
 import jakarta.ws.rs.core.MediaType;
 import java.lang.annotation.Annotation;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.List;
 
@@ -85,7 +86,11 @@ public class DecoratorMatcher
    private <T> T doDecoration(T target, Class type, Annotation[] annotations, MediaType mediaType, Annotation annotation, Decorator decorator) {
       DecoratorProcessor processor = null;
       try {
-         processor = decorator.processor().newInstance();
+         processor = decorator.processor().getDeclaredConstructor().newInstance();
+      } catch (InvocationTargetException e) {
+         throw new RuntimeException(e.getCause());
+      } catch (NoSuchMethodException e) {
+         throw new RuntimeException(e.getCause());
       } catch (InstantiationException e) {
          throw new RuntimeException(e.getCause());
       } catch (IllegalAccessException e) {
